--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="d-block d-lg-none">Aravind Palani</span>
                 <span class="d-none d-lg-block">
 				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" />
-				<h7 class="text-light"><a><i class="fa fa-envelope"></i>  arav_pal@aim.com </a></h7
+				<h7 class="text-light"><a><i class="fa fa-envelope"></i>  aravindp07@outlook.com </a></h7
 				
 				</span>
             </a>
